@@ -74,8 +74,8 @@ android {
 
     defaultConfig {
         resConfig "en"
-        minSdkVersion qtMinSdkVersion
-        targetSdkVersion qtTargetSdkVersion
+        minSdkVersion 31 //qtMinSdkVersion
+        targetSdkVersion 33 //qtTargetSdkVersion
         ndk.abiFilters = qtTargetAbiList.split(",")
     }
 }
