@@ -1,7 +1,7 @@
 // qmidictlAbout.h
 //
 /****************************************************************************
-   Copyright (C) 2010-2022, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2010-2023, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -31,7 +31,7 @@
 
 #define QMIDICTL_SUBTITLE     "A MIDI Remote Controller via UDP/IP Multicast"
 #define QMIDICTL_WEBSITE      "https://qmidictl.sourceforge.io"
-#define QMIDICTL_COPYRIGHT    "Copyright (C) 2010-2022, rncbc aka Rui Nuno Capela. All rights reserved."
+#define QMIDICTL_COPYRIGHT    "Copyright (C) 2010-2023, rncbc aka Rui Nuno Capela. All rights reserved."
 
 #define QMIDICTL_DOMAIN       "rncbc.org"
 
